ci: Fix setlocalversion patch failed (#451)

--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -103,6 +103,8 @@ jobs:
           grep -q "kernelsu" $DRIVER_MAKEFILE || echo "obj-y += kernelsu/" >> $DRIVER_MAKEFILE
           echo "[+] Apply KernelSU patches"
           cd $GKI_ROOT/common/ && git apply $GITHUB_WORKSPACE/KernelSU/.github/patches/$PATCH_PATH/*.patch
+          echo "Patch script/setlocalversion"
+          sed -i 's/-dirty//g' $GKI_ROOT/common/scripts/setlocalversion
           echo "[+] KernelSU setup done."
 
       - name: Symbol magic
