--- a/.github/workflows/build-kernel-a13.yml
+++ b/.github/workflows/build-kernel-a13.yml
@@ -29,7 +29,10 @@ jobs:
             os_patch_level: 2023-01
           - version: "5.10"
             sub_level: 157
-            os_patch_level: 2023-02
+            os_patch_level: 2023-03
+          - version: "5.10"
+            sub_level: 168
+            os_patch_level: 2023-04
           - version: "5.15"
             sub_level: 41
             os_patch_level: 2022-11
@@ -38,7 +41,10 @@ jobs:
             os_patch_level: 2023-01
           - version: "5.15"
             sub_level: 78
-            os_patch_level: 2023-02
+            os_patch_level: 2023-03
+          - version: "5.15"
+            sub_level: 94
+            os_patch_level: 2023-04
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
@@ -119,11 +125,11 @@ jobs:
       matrix:
         include:
           - version: "5.10"
-            sub_level: 149
-            os_patch_level: 2022-11
+            sub_level: 168
+            os_patch_level: 2023-04
           - version: "5.15"
-            sub_level: 74
-            os_patch_level: 2023-01
+            sub_level: 94
+            os_patch_level: 2023-04
     uses: ./.github/workflows/gki-kernel.yml
     with:
       version: android13-${{ matrix.version }}
