--- a/.github/workflows/build-kernel-a12.yml
+++ b/.github/workflows/build-kernel-a12.yml
@@ -29,6 +29,8 @@ jobs:
             os_patch_level: 2023-03
           - sub_level: 168
             os_patch_level: 2023-04
+          - sub_level: 177
+            os_patch_level: 2023-06
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
@@ -109,7 +111,7 @@ jobs:
     uses: ./.github/workflows/gki-kernel.yml
     with:
       version: android12-5.10
-      version_name: android12-5.10.168
-      tag: android12-5.10-2023-04
-      os_patch_level: 2023-04
+      version_name: android12-5.10.177
+      tag: android12-5.10-2023-06
+      os_patch_level: 2023-06
       patch_path: "5.10"
