--- a/.github/workflows/build-kernel-a12.yml
+++ b/.github/workflows/build-kernel-a12.yml
@@ -21,6 +21,14 @@ jobs:
     strategy:
       matrix:
         include:
+          - sub_level: 66
+            os_patch_level: 2021-11
+          - sub_level: 81
+            os_patch_level: 2022-03
+          - sub_level: 101
+            os_patch_level: 2022-05
+          - sub_level: 110
+            os_patch_level: 2022-07
           - sub_level: 136
             os_patch_level: 2022-11
           - sub_level: 149
