--- a/.github/workflows/build-kernel-a13.yml
+++ b/.github/workflows/build-kernel-a13.yml
@@ -32,7 +32,7 @@ jobs:
             os_patch_level: 2023-03
           - version: "5.10"
             sub_level: 168
-            os_patch_level: 2023-04
+            os_patch_level: 2023-05
           - version: "5.10"
             sub_level: 177
             os_patch_level: 2023-06
@@ -41,12 +41,15 @@ jobs:
             os_patch_level: 2022-11
           - version: "5.15"
             sub_level: 74
-            os_patch_level: 2023-01
+            os_patch_level: 2023-02
           - version: "5.15"
             sub_level: 78
             os_patch_level: 2023-03
           - version: "5.15"
             sub_level: 94
+            os_patch_level: 2023-05
+          - version: "5.15"
+            sub_level: 104
             os_patch_level: 2023-06
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
@@ -132,7 +135,7 @@ jobs:
             sub_level: 177
             os_patch_level: 2023-06
           - version: "5.15"
-            sub_level: 94
+            sub_level: 104
             os_patch_level: 2023-06
     uses: ./.github/workflows/gki-kernel.yml
     with:
