ci: fix rustfmt failed (#748)

--- a/.github/workflows/rustfmt.yml
+++ b/.github/workflows/rustfmt.yml
@@ -30,3 +30,4 @@ jobs:
       - uses: LoliGothick/rustfmt-check@master
         with:
           token: ${{ github.token }}
+          working-directory: userspace/ksud
