--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -73,6 +73,8 @@ jobs:
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
         with:
+          root-reserve-mb: 8192
+          temp-reserve-mb: 2048
           remove-dotnet: 'true'
           remove-android: 'true'
           remove-haskell: 'true'
@@ -108,10 +110,7 @@ jobs:
             cat $DEFAULT_MANIFEST_PATH
           fi
           repo --version
-          repo --trace sync -q -c -j$(nproc --all) --no-tags
-          if [ -d prebuilts/clang/host/linux-x86 ] && [ -f common/build.config.constants ]; then
-            ls -d prebuilts/clang/host/linux-x86/clang-r* | grep -v $(sed -n 's/^CLANG_VERSION=//p' common/build.config.constants)
-          fi
+          repo --trace sync -c -j$(nproc --all) --no-tags
           df -h
 
       - name: Setup KernelSU
