--- a/manager/gradle/libs.versions.toml
+++ b/manager/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ navigation = "2.5.3"
 compose-destination = "1.9.42-beta"
 libsu = "5.0.5"
 sheets-compose-dialogs = "1.2.0"
+markdown = "4.6.2"
 
 [plugins]
 agp-app = { id = "com.android.application", version.ref = "agp" }
@@ -56,3 +57,5 @@ compose-destinations-ksp = { group = "io.github.raamcosta.compose-destinations",
 sheet-compose-dialogs-core = { group = "com.maxkeppeler.sheets-compose-dialogs", name = "core", version.ref = "sheets-compose-dialogs"}
 sheet-compose-dialogs-list = { group = "com.maxkeppeler.sheets-compose-dialogs", name = "list", version.ref = "sheets-compose-dialogs"}
 sheet-compose-dialogs-input = { group = "com.maxkeppeler.sheets-compose-dialogs", name = "input", version.ref = "sheets-compose-dialogs"}
+
+markdown = { group = "io.noties.markwon", name = "core", version.ref = "markdown" }
