--- a/.github/workflows/build-kernel-a14.yml
+++ b/.github/workflows/build-kernel-a14.yml
@@ -24,6 +24,9 @@ jobs:
           - version: "5.15"
             sub_level: 110
             os_patch_level: 2023-09
+          - version: "6.1"
+            sub_level: 25
+            os_patch_level: 2023-10
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
