--- a/.github/workflows/build-kernel-a13.yml
+++ b/.github/workflows/build-kernel-a13.yml
@@ -42,6 +42,9 @@ jobs:
           - version: "5.10"
             sub_level: 186
             os_patch_level: 2023-09
+          - version: "5.10"
+            sub_level: 189
+            os_patch_level: 2023-10            
           - version: "5.15"
             sub_level: 41
             os_patch_level: 2022-11
@@ -60,6 +63,9 @@ jobs:
           - version: "5.15"
             sub_level: 119
             os_patch_level: 2023-09
+          - version: "5.15"
+            sub_level: 123
+            os_patch_level: 2023-10
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
@@ -141,11 +147,11 @@ jobs:
       matrix:
         include:
           - version: "5.10"
-            sub_level: 187
-            os_patch_level: 2023-08
+            sub_level: 189
+            os_patch_level: 2023-10
           - version: "5.15"
-            sub_level: 119
-            os_patch_level: 2023-09
+            sub_level: 123
+            os_patch_level: 2023-10
     uses: ./.github/workflows/gki-kernel.yml
     with:
       version: android13-${{ matrix.version }}
