--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,19 @@ jobs:
     secrets: inherit
   build-a12-kernel:
     uses: ./.github/workflows/build-kernel-a12.yml
+    secrets: inherit
   build-a13-kernel:
     uses: ./.github/workflows/build-kernel-a13.yml
+    secrets: inherit
   build-a14-kernel:
     uses: ./.github/workflows/build-kernel-a14.yml
+    secrets: inherit
   build-wsa-kernel:
     uses: ./.github/workflows/build-kernel-wsa.yml
+    secrets: inherit
   build-arcvm-kernel:
     uses: ./.github/workflows/build-kernel-arcvm.yml
+    secrets: inherit
   release:
     needs:
       - build-manager
